--- a/BAS/server/test-index.html
+++ b/BAS/server/test-index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>token 및 code 확인</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./static/style.css">
 </head>
 
@@ -18,7 +18,8 @@
     <div class="content-title">Information</div>
     <div class="content-container">
         <div class="content-list">
-            <!-- <div class="content-items">
+            <div class="client-name">Information</div>
+            <div class="content-items">
                 <section><div>InfoType</div><p>CodeInfo</p></section>
                 <section><div>ID_code</div><p>TestCID</p></section>
                 <section><div>DID_RO</div><p>TestDIDRO</p></section>
@@ -41,7 +42,33 @@
                 <section><div>URI_Redirection</div><p>TESTURI</p></section>
                 <section><div>Condition</div><p>Available</p></section>
                 <section><div>ID_token</div><p>TestTID</p></section>
-            </div> -->
+            </div>
+            <div class="client-name">Information</div>
+            <div class="content-list">
+                <div class="content-items">
+                    <section><div>InfoType</div><p>CodeInfo</p></section>
+                    <section><div>ID_code</div><p>TestCID</p></section>
+                    <section><div>DID_RO</div><p>TestDIDRO</p></section>
+                    <section><div>DID_client</div><p>TESTDIDClient</p></section>
+                    <section><div>Scope</div><p>all</p></section>
+                    <section><div>Hash_code</div><p>TestCHV</p></section>
+                    <section><div>Time_issueed</div><p>TestTime</p></section>
+                    <section><div>URI_Redirection</div><p>TESTURI</p></section>
+                    <section><div>Condition</div><p>Available</p></section>
+                    <section><div>ID_token</div><p>TestTID</p></section>
+                </div>
+                <div class="content-items">
+                    <section><div>InfoType</div><p>CodeInfo</p></section>
+                    <section><div>ID_code</div><p>TestCID</p></section>
+                    <section><div>DID_RO</div><p>TestDIDRO</p></section>
+                    <section><div>DID_client</div><p>TESTDIDClient</p></section>
+                    <section><div>Scope</div><p>all</p></section>
+                    <section><div>Hash_code</div><p>TestCHV</p></section>
+                    <section><div>Time_issueed</div><p>TestTime</p></section>
+                    <section><div>URI_Redirection</div><p>TESTURI</p></section>
+                    <section><div>Condition</div><p>Available</p></section>
+                    <section><div>ID_token</div><p>TestTID</p></section>
+                </div>
         </div>
     </div>
     <script src="./static/script.js"></script>
