--- a/BAS/server/static/code.html
+++ b/BAS/server/static/code.html
@@ -15,44 +15,48 @@
         <div class="side-items token">Token</div>
     </div>
     
-    <div class="content-title">Information</div>
+    <div class="content-title">Code Information</div>
     <div class="content-container">
         <div style="background-color: cyan;font-size: 40px;">
-            <b>did:BAS:c12345678abcdefghi  &nbsp;&nbsp;(RS1)</b>
+            <b>did:BAS:c12345678abcdefghi  &nbsp;&nbsp;(Client 1)</b>
         </div>
         
         <div class="content-list">
 
             <div class="content-items">
-                <section><div>InfoType</div><p>TokenInfo</p></section>
-                <section><div>ID_code</div><p>TI_JU3QcJ3ROGOL6Sg3QEI6IEB16RCUkJBADDeB+s/uBw0=</p></section>
+                <section><div>InfoType</div><p>CodeInfo</p></section>
+                <section><div>ID_code</div><p>Cl_5MvNzxDOUBOFHMDHYsF2BoEbjCwRBH9eCwJPwrSDs8=</p></section>
                 <section><div>DID_RO</div><p>did:BAS:u12345678abcdefghi</p></section>
                 <section><div>DID_client</div><p>did:BAS:c12345678abcdefghi</p></section>
                 <section><div>Scope</div><p>https://resourceserver1.com/Calendars.Read</p></section>
-                <section><div>Hash_code</div><p>JU3QcJ3ROGOL6Sg3QEI6IEB16RCUkJBADDeB+s/uBw0=</p></section>
-                <section><div>Time_issueed</div><p>2021-06-04 04:28:58.583828065 +0900 KST m=_10.961103037</p></section>
-                <section><div>Time_expiration</div><p>2021-06-04 04:28:58.583828065 +0900 KST m=_10.961103037</p></section>
+                <section><div>Hash_code</div><p>5MvNzxDOUBOFHMDHYsF2BoEbjCwRBH9eCwJPwrSDs8=</p></section>
+                <section><div>Time_issueed</div><p>2021-06-04 04:28:57.567126289 +0900 KST m=_9.944401242</p></section>
+                <section><div>Time_expiration</div><p>2021-06-05 04:28:57.567126289 +0900 KST m=_9.944401242</p></section>
                 <section><div>URI_Redirection</div><p>http://localhost:9094/oauth2</p></section>
                 <section><div>Condition</div><p>Available</p></section>
+                <section><div>ID_token</div><p>TI_Lyqfjhwg86hLu5bC2I8DRfoxWsRn35C5EQ1e2xzXArg=</p></section>
             </div>
         </div>
         <div style="background-color: cyan;font-size: 40px;">
-            <b>did:BAS:c12345678abcdefghi  &nbsp;&nbsp;(RS2)</b>
+            <b>did:BAS:c87654321abcdefghi  &nbsp;&nbsp;(Client 2)</b>
         </div>
         <div class="content-list">
             <div class="content-items">
-                <section><div>InfoType</div><p>TokenInfo</p></section>
-                <section><div>ID_code</div><p>TI_Lyqfjhwg86hLu5bC2I8DRfoxWsRn35C5EQ1e2xzXArg=</p></section>
+                <section><div>InfoType</div><p>CodeInfo</p></section>
+                <section><div>ID_code</div><p>Cl_5+7+Sb8Qmy6hcj/TJHoiqtJzml8S38QbOfzr8SxdKNY=</p></section>
                 <section><div>DID_RO</div><p>did:BAS:u12345678abcdefghi</p></section>
                 <section><div>DID_client</div><p>did:BAS:c87654321abcdefghi</p></section>
                 <section><div>Scope</div><p>https://resourceserver2.org/Contacts.Write</p></section>
-                <section><div>Hash_code</div><p>Lyqfjhwg86hLu5bC2I8DRfoxWsRn35C5EQ1e2xzXArg=</p></section>
-                <section><div>Time_issueed</div><p>2021-06-04 04:30:09.445610684 +0900 KST m=_16.810369407</p></section>
-                <section><div>Time_issueed</div><p>2021-06-04 04:30:09.445610684 +0900 KST m=_16.810369407</p></section>
+                <section><div>Hash_code</div><p>5+7+Sb8Qmy6hcj/TJHoiqtJzml8S38QbOfzr8SxdKNY==</p></section>
+                <section><div>Time_issueed</div><p>2021-06-04 04:30:08.435879358 +0900 KST m=_15.800638075</p></section>
+                <section><div>Time_expiration</div><p>2021-06-05 04:30:08.435879358 +0900 KST m=_15.800638075</p></section>
                 <section><div>URI_Redirection</div><p>http://localhost:9094/oauth2</p></section>
                 <section><div>Condition</div><p>Available</p></section>
+                <section><div>ID_token</div><p>TI_JU3QcJ3ROGOL6Sg3QEI6IEB16RCUkJBADDeB+s/uBw0=</p></section>
             </div>
         </div>
+
+
     </div>
     <!-- <script src="./static/script.js"></script> -->
 </body>
